<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Here Now</string>

    <string name="facebook_app_id" translatable="false">1364560283658078</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">1998b6027012c6ba9b9e9fbf56923569</string>
    <string name="GOOGLE_MAPS_API_KEY" translatable="false">AIzaSyAL6hW1s37z0n_tcNYVjieIlvwRLHi9OZ4</string>
    <string name="developer_name" translatable="false">Pedro Massango</string>
    <string name="developer">Desenvolvedor</string>
    <string name="privacy_policy_url" translatable="false">https://pedromassangoblog.wordpress.com/2018/01/06/privacy-policy-of-here-now</string>

    <string name="please_wait">Por favor, aguarde…</string>
    <string name="saving_contact">Salvando contacto…</string>

    <string name="str_ok" translatable="false">OK</string>
    <string name="str_cancel">Cancelar</string>

    <string name="something_was_wrong">Algo de errado aconteceu, tente novamente!</string>
    <string name="login_error">Erro de login, tente novamente.</string>
    <string name="login_error_message">Erro de login, parece que não ha uma conexão com a internet!</string>
    <string name="register_new_contact">Novo contacto</string>
    <string name="str_save">Salvar</string>
    <string name="phone_number_invalid">Você adiciou um número invalido.</string>
    <string name="no_friend_to_show_title">Sem contactos disponivel!</string>
    <string name="no_friend_to_show_message">Ninguém adicionou você a lista de permitidos a ver sua localizacão. Partilhe o app, e peca aos amigos que adicionem voce a lista de quem pode ver sua localizacão.</string>
    <string name="map">Mapa</string>
    <string name="contacts">Contactos</string>
    <string name="settings">Configuracoes</string>
    <string name="intro_one_title" tools:ignore="Typos">Veja quem esta perto de você neste momento.</string>
    <string name="intro_one_description">Adicione contactos para poderem ver você no mapa.</string>
    <string name="intro_two_title">Seja visto por quem você quer.</string>
    <string name="intro_two_description">Você precisa estar na lista de seus amigos, para você poder ver eles também.</string>
    <string name="intro_tree_title">Dé-me acesso a sua localizacao</string>
    <string name="intro_tree_description">Nao se preocupe, mostramos sua localizacao apenas a quem voce permitir.</string>
    <string name="intro_four_title">Precisamos de acesso a seus contactos.</string>
    <string name="intro_four_description">Precisaremos listar e dar a escolha a você de selecionar quem pode ver voê no mapa.</string>
    <string name="empty_contacts_info">Sem contactos na sua lista.\n Clique aqui para adicionar.</string>
    <string name="add">Adicionar</string>
    <string name="you_are_here">Você está aqui!</string>
    <string name="fail">Falha!</string>
    <string name="unable_to_save_contact">Nao foi possivel salvar o contacto. verifique sua conexao a internet, e tente novamente.</string>
    <string name="not_connection">Sem conexao a internet.</string>
    <string name="getting_contacts">Carregando contactos, aguarde…</string>
    <string name="get_contacts_error_click_toretry">Falha ao obter contactos.\nClique para tentar novamente.</string>
    <string name="permission_updated_success">Permissao actualizada.</string>
    <string name="retry">Tentar novamente</string>
    <string name="get_friends_location_error">Falha ao obter a localizacao de seus contactos. Clique aqui para tentar novamente.</string>
    <string name="privacy_policy">Politica de privacidade</string>
    <string name="privacy_policy_summary">Clique aqui para ler a politica de privacidade.</string>
    <string name="version">Versão</string>

    <!--Settings preferences keys-->
    <string name="prefs_privacy_policy_key" translatable="false">privacy_policy_key</string>
    <string name="prefs_notification" translatable="false">prefs_notification</string>
    <string name="prefs_auto_login" translatable="false">prefs_auto_login</string>
    <string name="prefs_user_phone_number" translatable="false">prefs_user_phone_number</string>
    <string name="prefs_app_version" translatable="false">prefs_app_version</string>

    <string name="neaby_places">Locais próximos</string>
    <string name="request_location_permission_title">Permissao necessária</string>
    <string name="request_location_permission_message">Precisamos de sua localizacao para mostrar você no mapa!</string>
    <string name="contact_deleted">Contacto eliminado.</string>
    <string name="delete_contact_error_message">Ocorreu algum erro, ao eliminar o contacto, por favor verifique sua internet e tente novamente!</string>
    <string name="about">Sobre</string>
    <string name="general">Geral</string>
    <string name="notifications">Notificações</string>
    <string name="disabled">Desativado</string>
    <string name="enabled">Activado</string>
    <string name="auto_login_summary">Se desligado, você fará o login, sempre que abrir este aplicativo.</string>
    <string name="end_session">Terminar sessao</string>
    <string name="prefs_logout" translatable="false">prefs_logout</string>
    <string name="app_about">HereNow, permite que o usuário saiba quem está com ele no momento. Isto ajuda-nos quando formos ao encontro de alguém, e/ou queremos saber onde alguém está.</string>
    <string name="user">Usuario</string>
    <string name="add_country_code">Adicione o código do país.</string>
    <string name="the_number">O número</string>
    <string name="whant_to_see_your_location">quer ver você no mapa. Clique aqui para permitir.</string>
    <string name="added_you">adicionou você</string>
    <string name="nome_opcional">Nome (opcional)</string>
    <string name="cod_pa_s_numero_de_telefone">Cod. país + Numero de telefone</string>
    <string name="importar_dos_contactos">Importar dos contactos</string>
    <string name="restaurant">Restaurante</string>
    <string name="hospital">Hospital</string>
    <string name="store">Lojas</string>
    <string name="school">Escolas</string>
    <string name="church">Igrejas</string>
    <string name="gas_station">Gasolina</string>
    <string name="update_permission_error_message">Não foi possível actualizar a permissão. Tente novamente.</string>
    <string name="your_notifications_appear_here">Suas notificacoes estarao aqui.</string>
    <string name="request_gps_enable_title">GPS desabilitado</string>
    <string name="request_gps_enable_message">Precisamos que você ative o GPS, para poder-mos localizar seus contactos.</string>
    <string name="str_enable">Activar</string>
    <string name="want_see_your_location">Quer ver sua localizacão.</string>
    <string name="allow">Permitir</string>
    <string name="ignore">Ignorar</string>
    <string name="click_here_to_quit">Clique aqui para sair.</string>

    <!--Settings preferences keys-->

</resources>
