<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <CheckBoxPreference
            android:key="@string/prefs_notification"
            android:title="@string/notifications"
            android:defaultValue="true"
            android:summaryOff="@string/disabled"
            android:summaryOn="@string/enabled"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:title="@string/version"
            android:summary="@string/version_name"/>

        <Preference
            android:summary="@string/developer_name"
            android:title="@string/developer" />

        <Preference
            android:key="@string/prefs_privacy_policy_key"
            android:summary="@string/privacy_policy_summary"
            android:title="@string/privacy_policy" />
    </PreferenceCategory>

</PreferenceScreen>