<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_places"
        android:icon="@drawable/icon_places"
        android:title="@string/neaby_places" />

    <item
        android:id="@+id/action_contacts"
        android:icon="@drawable/ic_friends"
        android:title="@string/contacts" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />

    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>