<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="start"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingEnd="@dimen/row_padding_end"
    android:paddingLeft="@dimen/row_padding_end"
    android:paddingRight="@dimen/row_padding_start"
    android:paddingStart="@dimen/row_padding_start"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/tv_notification_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/tv_notification_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_notification_author"
        android:layout_toRightOf="@id/tv_notification_author"
        android:paddingLeft="4dp"
        android:paddingStart="4dp"
        android:text="@string/want_see_your_location"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/btn_allow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_notification_author"
        android:layout_marginTop="@dimen/size16"
        android:background="@drawable/circle_retangle"
        android:text="@string/allow"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_notification_author"
        android:layout_marginEnd="@dimen/size16"
        android:layout_marginRight="@dimen/size16"
        android:layout_marginTop="@dimen/size16"
        android:layout_toLeftOf="@id/btn_allow"
        android:layout_toStartOf="@id/btn_allow"
        android:background="@drawable/circle_retangle"
        android:text="@string/ignore"
        android:textColor="@color/white"
        android:textSize="12sp" />

</RelativeLayout>